[package]
name = "rs-conv-helper"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[dependencies.prost]
version = "0.12"
default-features = false
features = [
	"prost-derive",
	"std",
]

[dependencies.prost-types]
version = "0.12"
default-features = false
features = [
	"std",
]

[dependencies.tonic]
version = "0.10"
default-features = false
features = [
	"transport",
	"codegen",
	"prost",
]

[build-dependencies.tonic-build]
version = "0.10"
default-features = false
features = [
	"transport",
	"prost",
]
